--- a/src/components/cursos/Cursos.css
+++ b/src/components/cursos/Cursos.css
@@ -26,6 +26,10 @@
     transition: transform .2s; 
 }
 
+.footer-card {
+    padding-top: 1rem;
+}
+
 .zoom:hover {
     transform: scale(1.1); 
   }
@@ -34,6 +38,7 @@
     font-family: 'Encode Sans', sans-serif;
     font-weight: bold;
     font-size: 16px;
+    line-height: 1.5;
 }
 
 .title-solo{
