--- a/src/components/despachante/Despachante.css
+++ b/src/components/despachante/Despachante.css
@@ -29,7 +29,7 @@
 .texto{
     font-size: 20px;
     color: #ffffff;
-    line-height: 30px;
+    line-height: 1.5;
     text-align: justify;
     margin-bottom: 40px;
     font-family: 'Encode Sans', sans-serif;
@@ -39,7 +39,7 @@
     font-size: 20px;
     color: #DBB33C;
     font-weight: bold;
-    line-height: 30px;
+    line-height: 1.5;
     margin-bottom: 30px;
     text-align: justify;
     font-family: 'Encode Sans', sans-serif;
