--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    font-family: 'Encode Sans', sans-serif;
     align-items: center;
     width: 100%;
     height: 112px;
@@ -11,6 +12,7 @@
 .footer-text{
     color: rgba(255, 255, 255, 0.171);
     text-align: center;
+    padding: 1rem;
 }
 
 #fale{
